test/files/neg/t6601/AccessPrivateConstructor_2.scala
class AccessPrivateConstructor {
  new PrivateConstructor("") // Scalac should forbid accessing to the private constructor!
}
